chore: upgraded to spring boot 3 and migrated from javax to jakarta